# simple-counter-rs

./: .defmt.toml  .gitignore  Cargo.toml  LICENSE  README.md  platformio.ini  rustfmt.toml
.cargo/: config.toml
cad/: case.3mf  case.f3d  case.stl
schematic/: simple-counter.kicad_pcb  simple-counter.kicad_prl  simple-counter.kicad_pro  simple-counter.kicad_sch  sym-lib-table
schematic/database/: project.db
schematic/gerber/: simple-counter-B_Cu.gbl  simple-counter-B_Mask.gbs  simple-counter-B_Paste.gbp  simple-counter-B_Silkscreen.gbo  simple-counter-Edge_Cuts.gm1  simple-counter-F_Cu.gtl  simple-counter-F_Mask.gts  simple-counter-F_Paste.gtp  simple-counter-F_Silkscreen.gto  simple-counter-NPTH.drl  simple-counter-PTH.drl  simple-counter-job.gbrjob
simple-counter/: simple-counter.kicad_prl  simple-counter.kicad_pro
src/: arduino.cpp  lib.rs  main.cpp
